--- a/src/container/Hero/Hero.module.css
+++ b/src/container/Hero/Hero.module.css
@@ -117,6 +117,9 @@
   .star3 {
     display: none;
   }
+  .star4{
+    display: none;
+  }
   .colorMesh1 {
     display: none;
   }
